<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"
    tools:context=".fragment.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_toolbar_name"
            android:textAppearance="@style/toolbar_text_style" />
    </androidx.appcompat.widget.Toolbar>

    <!--1-->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginBottom="7.5dp"
        android:height="18dp"
        android:text="@string/emailTextView_firstScree"
        android:textAppearance="@style/e_mail"
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/rectangle"
        android:hint="@string/email_hint_text"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--  2  -->

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginBottom="7.5dp"
        android:height="18dp"
        android:text="@string/passwordTextView_firstScreen"
        android:textAppearance="@style/password"
        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:hint="@string/password_hint_text"
        android:inputType="numberPassword"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <!--  3  -->

    <TextView
        android:id="@+id/repeatPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginBottom="7.5dp"
        android:height="18dp"
        android:text="@string/repeatPasswordTextView_firstScreen"
        android:textAppearance="@style/password"
        app:layout_constraintBottom_toTopOf="@id/repeatPasswordEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:hint="@string/password_hint_text"
        android:inputType="numberPassword"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <!--Button-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@drawable/rectangle_button"
        android:text="@string/registrationButton"
        android:textAppearance="@style/regButton"
        android:theme="@style/regButton_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText"

        />

</androidx.constraintlayout.widget.ConstraintLayout>