<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"
    tools:context=".fragment.PaymentFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/payment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/payment_tollbar"
            android:textAppearance="@style/toolbar_text_style" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recycleViewInputLayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/payment_toolbar"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/payment_rv_component"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/payment_recycleview_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recycleViewInputLayout"
        app:layout_constraintBottom_toTopOf="@id/on_pay_btn"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/payment_waiting_time_textView"
        android:textAppearance="@style/payment_wait_textView_style" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/on_pay_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/payment_button"
        android:textAppearance="@style/regButton"
        android:theme="@style/regButton_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
